--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,19 @@ form button {
 form button:hover {
   background-color: green;
 }
+#ramen-menu {
+ display: flex;
+ flex-wrap: wrap;
+ gap: 15px;
+ padding: 10px;
+ justify-content: center;
+}
+
+
+#ramen-menu img {
+ width: 120px;
+ height: 120px;
+ border-radius: 10px;
+ cursor: pointer;
+ transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
